5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1592_1800.log
== TEST (2019-03-25 13:31:03) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))

from math import *
x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)
print(round(x, 6)

-- ERROR:
File "XXXX", line 8
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:31:13) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))

from math import *
x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)
print(round(x, 6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:31:30) 
-- CODE:
a=float(input("valor de a: "))
b=float(input("valor de b: "))
c=float(input("valor de c: "))

from math import *
x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)
print(round(x, 6))

-- EXECUTION TIME:
0.246556
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:31:53) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))

from math import *
x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)
print(round(x, 6))

-- EXECUTION TIME:
0.171749
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:31:58) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))

from math import *
x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)
print(round(x, 6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:32:06) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))

from math import *
x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)
print(round(x, 6))

-- EXECUTION TIME:
0.15635
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:32:23) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))


x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)
print(round(x, 6))

-- EXECUTION TIME:
0.206989
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:33:03) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))

x = (a ** 2 + b ** 2 + c ** 2) // (a + b + c)
print(round(x, 6))

-- EXECUTION TIME:
0.154067
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:35:51) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
if a + b + c ! = 0 
x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

print(round(x, 6))

-- ERROR:
File "XXXX", line 4
    if a + b + c ! = 0 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:35:58) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
if a + b + c != 0 :
x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

print(round(x, 6))

-- ERROR:
File "XXXX", line 5
    x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:36:00) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
if a + b + c != 0 :
x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

print(round(x, 6))

-- EXECUTION TIME:
0.171421
-- ERROR:
  File "/home/codebench/codes/1592/1800/main.py", line 5
    x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:36:10) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
if a + b + c != 0 :
	x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

	print(round(x, 6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:36:19) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
if a + b + c != 0 :
	x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

	print(round(x, 6))

-- EXECUTION TIME:
0.194902
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:37:32) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
if a + b + c != 0 :
	x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

	print(round(x, 6))
else  a + b + c = 0 :
-- ERROR:
File "XXXX", line 8
    else  a + b + c = 0 :
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:37:47) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
if a + b + c != 0 :
	x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

	print(round(x, 6))
else  a + b + c = 0 :
	print(0)
-- ERROR:
File "XXXX", line 8
    else  a + b + c = 0 :
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:37:49) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
if a + b + c != 0 :
	x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

	print(round(x, 6))
else  a + b + c = 0 :
	print(0)
-- EXECUTION TIME:
0.165386
-- ERROR:
  File "/home/codebench/codes/1592/1800/main.py", line 8
    else  a + b + c = 0 :
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:26:21) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
if a + b + c != 0 :
	x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

	print(round(x, 6))
else  a + b + c = 0 :
	print(0)
-- ERROR:
File "XXXX", line 8
    else  a + b + c = 0 :
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:26:42) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
if a + b + c != 0 :
	x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

	print(round(x, 6))
else :
	print(0)
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 15:26:55) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
if a + b + c != 0 :
	x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

	print(round(x, 6))
else :
	print(0)
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 15:27:08) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
if a + b + c != 0 :
	x = (a ** 2 + b ** 2 + c ** 2) / (a + b + c)

	print(round(x, 6))
else :
	print(0)
-- EXECUTION TIME:
0.162821
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:23:51) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
if a + b + c != 0 :
	x = ((a ** 2)+ (b ** 2) + (c ** 2)) / (a + b + c)

	print(round(x, 6))
else :
	print(0)
-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:24:04) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
if a + b + c != 0 :
	x = ((a ** 2)+ (b ** 2) + (c ** 2)) / (a + b + c)

	print(round(x, 7))
else :
	print(0)
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:24:18) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
if a + b + c != 0 :
	x = ((a ** 2)+ (b ** 2) + (c ** 2)) / (a + b + c)

	print(round(x, 7))
else :
	print(0)
-- EXECUTION TIME:
0.20002
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:23:22) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
l= ((a ** 2)+ (b ** 2) + (c ** 2)) / (a + b + c)

print(round(x, 7))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(x, 7))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 15:23:25) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
l= ((a ** 2)+ (b ** 2) + (c ** 2)) / (a + b + c)

print(round(x, 7))

-- EXECUTION TIME:
0.216798
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 6, in <module>
    print(round(x, 7))
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 15:23:30) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
l= ((a ** 2)+ (b ** 2) + (c ** 2)) / (a + b + c)

print(round(l, 7))

-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 15:23:42) 
-- CODE:
a=int(input("valor de a: "))
b=int(input("valor de b: "))
c=int(input("valor de c: "))
l= ((a ** 2)+ (b ** 2) + (c ** 2)) / (a + b + c)

print(round(l, 7))

-- EXECUTION TIME:
0.20728
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
